<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">IoT TELECOM</string>
    <string name="Overview">Overview</string>
    <string name="Temperature">Temperature</string>
    <string name="Light">Light</string>
    <string name="Humidity">Humidity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example" translatable="false">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="Refresh">Refresh</string>
    <string name="default_text" translatable="false">Default</string>
    <string name="Motes">Motes</string>
    <string name="ID" translatable="false">ID</string>
    <string name="Type">Type</string>
    <string name="IPv6_MAC" translatable="false">IPv6/MAC</string>
    <string name="Lat" translatable="false">Lat</string>
    <string name="Lon" translatable="false">Lon</string>
    <string name="NumberMotes">Number of connected motes:</string>
    <string name="Date">Date</string>
    <string name="Value">Value</string>
    <string name="Mote">Mote</string>
    <string name="Terminate">Terminate</string>
    <string name="RunningBackground">Running background…</string>
    <string name="LightAlert">Light Alert</string>
    <string name="LightAlertContent">Unexpected light : </string>
    <string name="TemperatureAlert">Temperature Alert</string>
    <string name="TemperatureAlertContent">Unexpected temperature : </string>
    <string name="HumidityAlert">Humidity Alert</string>
    <string name="HumidityAlertContent">Unexpected humidity detected !</string>
    <string name="MultipleAlerts">Multiple Alerts</string>
    <string name="MultipleAlertsContent">Unexpected events requires your attention…</string>
    <string name="Icon" translatable="false">Icon</string>
    <string name="settings_service_category_header">Service preferences</string>
    <string name="settings_update_interval">Polling time</string>
    <string name="settings_update_interval_description">The time between polling data</string>
    <string name="settings_update_interval_dialog">Set the polling time</string>
    <string name="settings_update_cache">Buffered values</string>
    <string name="settings_update_cache_description">Set the number of buffered values for the service</string>
    <string name="settings_update_cache_dialog">Set the number of buffered values</string>
    <string name="settings_service_at_boot">Service at boot</string>
    <string name="settings_service_at_boot_description">If enable the service will start at boot</string>
    <string name="settings_notification_category_header">Notifications preferences</string>
    <string name="settings_temperature_max">Maximum temperature</string>
    <string name="settings_temperature_max_description">Raise a notification if the temperature is above</string>
    <string name="settings_temperature_max_dialog">Set the maximum temperature</string>
    <string name="settings_temperature_min">Minimum temperature</string>
    <string name="settings_temperature_min_description">Raise a notification if the temperature is below</string>
    <string name="settings_temperature_min_dialog">Set the minimum temperature</string>
    <string name="settings_temperature_enable">Temperature alert</string>
    <string name="settings_temperature_enable_description">Raise a notification if temperature is out of bound</string>
    <string name="settings_light">Light variation</string>
    <string name="settings_light_description">Raise a notification if the light varies more than this value</string>
    <string name="settings_light_dialog">Set the light variation</string>
    <string name="settings_light_enable">Light alert</string>
    <string name="settings_light_enable_description">Raise a notification if light is turned on or off</string>
    <string name="settings_time_start">Start time</string>
    <string name="settings_time_start_description">Set the hour when notifications are enabled</string>
    <string name="settings_time_start_dialog">Set the start hour</string>
    <string name="settings_time_end">End time</string>
    <string name="settings_time_end_description">Set the hour when notifications are disabled</string>
    <string name="settings_time_end_dialog">Set the end hour</string>
    <string name="settings_time_enable">Scheduled alert</string>
    <string name="settings_time_enable_description">If enable notifications will only be raised during the hours set below</string>
    <string name="settings_mail_enable">Mail alert</string>
    <string name="settings_mail_enable_description">If enable notifications will be send by mail</string>
    <string name="settings_mail">Mail address</string>
    <string name="settings_mail_description">Set the mail address to send notifications</string>
    <string name="settings_mail_dialog">Set the mail address</string>
    <string name="settings_sms_enable">SMS alert</string>
    <string name="settings_sms_enable_description">If enable notifications will be send by SMS</string>
    <string name="settings_sms">Telephone number</string>
    <string name="settings_sms_description">Set the telephone number to send notifications</string>
    <string name="settings_sms_dialog">Set the telephone number</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>


</resources>
