<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2014-2015 Fowl Corporation
  ~
  ~ This file is part of HomeBank4Android.
  ~
  ~ HomeBank4Android is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ HomeBank4Android is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with HomeBank4Android.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
        android:title="@string/settings_service_category_header">
        <com.axel_martin.iottelecom.GUI.PollingPickerPreference
            android:key="interval"
            android:title="@string/settings_update_interval"
            android:summary="@string/settings_update_interval_description"
            android:dialogTitle="@string/settings_update_interval_dialog"/>
        <com.axel_martin.iottelecom.GUI.CachePickerPreference
            android:key="cache"
            android:title="@string/settings_update_cache"
            android:summary="@string/settings_update_cache_description"
            android:dialogTitle="@string/settings_update_cache_dialog"/>
        <SwitchPreference
            android:key="isServiceStartAtBoot"
            android:title="@string/settings_service_at_boot"
            android:summary="@string/settings_service_at_boot_description"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/settings_notification_category_header">
        <SwitchPreference
            android:key="isTemperatureEnable"
            android:title="@string/settings_temperature_enable"
            android:summary="@string/settings_temperature_enable_description"
            />
        <com.axel_martin.iottelecom.GUI.TemperaturePickerPreference
            android:key="maximumTemperature"
            android:dependency="isTemperatureEnable"
            android:title="@string/settings_temperature_max"
            android:summary="@string/settings_temperature_max_description"
            android:dialogTitle="@string/settings_temperature_max_dialog"/>
        <com.axel_martin.iottelecom.GUI.TemperaturePickerPreference
            android:key="minimumTemperature"
            android:dependency="isTemperatureEnable"
            android:title="@string/settings_temperature_min"
            android:summary="@string/settings_temperature_min_description"
            android:dialogTitle="@string/settings_temperature_min_dialog"/>
        <SwitchPreference
            android:key="isLightEnable"
            android:title="@string/settings_light_enable"
            android:summary="@string/settings_light_enable_description"
            />
        <com.axel_martin.iottelecom.GUI.LightPickerPreference
            android:key="light"
            android:dependency="isLightEnable"
            android:title="@string/settings_light"
            android:summary="@string/settings_light_description"
            android:dialogTitle="@string/settings_light_dialog"/>
        <SwitchPreference
            android:key="isTimeEnable"
            android:title="@string/settings_time_enable"
            android:summary="@string/settings_time_enable_description"
            />
        <com.axel_martin.iottelecom.GUI.TimePickerPreference
            android:key="startTime"
            android:dependency="isTimeEnable"
            android:title="@string/settings_time_start"
            android:summary="@string/settings_time_start_description"
            android:dialogTitle="@string/settings_time_start_dialog"/>
        <com.axel_martin.iottelecom.GUI.TimePickerPreference
            android:key="endTime"
            android:dependency="isTimeEnable"
            android:title="@string/settings_time_end"
            android:summary="@string/settings_time_end_description"
            android:dialogTitle="@string/settings_time_end_dialog"/>
        <SwitchPreference
            android:key="isMailEnable"
            android:title="@string/settings_mail_enable"
            android:summary="@string/settings_mail_enable_description"
            />
        <EditTextPreference
            android:key="mailAddress"
            android:dependency="isMailEnable"
            android:title="@string/settings_mail"
            android:summary="@string/settings_mail_description"
            android:dialogTitle="@string/settings_mail_dialog"/>
        <SwitchPreference
            android:key="isSmsEnable"
            android:title="@string/settings_sms_enable"
            android:summary="@string/settings_sms_enable_description"
            />
        <EditTextPreference
            android:key="telNumber"
            android:inputType="phone"
            android:dependency="isSmsEnable"
            android:title="@string/settings_sms"
            android:summary="@string/settings_sms_description"
            android:dialogTitle="@string/settings_sms_dialog"/>
    </PreferenceCategory>
</PreferenceScreen>
